# education_smart_systems_c_lang

hw1/: task1.c  task2.c
hw10/: CMakeLists.txt  task1.c  task10.c  task11.c  task12.c  task13.c  task14.c  task15.c  task16.c  task17.c  task18.c  task19.c  task2.c  task20.c  task21.c  task22.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c  task9.c
hw11/: Makefile  main.c  temp_api.c  temp_api.h
hw12/: Makefile  deps.mk  main.c
hw13/: Makefile  deps.mk  main.c  sensor_t.c  sensor_t.h  sensor_vector.c  sensor_vector.h  temp_api.c  temp_api.h
hw3/: CMakeLists.txt  task12.c  task13.c  task3.c  task4.c  task5.c  task6.c
hw4/: CMakeLists.txt  task10.c  task11.c  task14.c  task15.c  task16.c  task17.c  task18.c  task19.c  task7.c  task8.c  task9.c
hw5/: CMakeLists.txt  task1.c  task10.c  task11.c  task12.c  task13.c  task14.c  task15.c  task16.c  task17.c  task18.c  task19.c  task2.c  task20.c  task21.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c  task9.c
hw6/: CMakeLists.txt  task1.c  task10.c  task11.c  task12.c  task13.c  task14.c  task15.c  task16.c  task17.c  task18.c  task19.c  task2.c  task20.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c  task9.c
hw7/: CMakeLists.txt  task1.c  task10.c  task11.c  task12.c  task13.c  task14.c  task15.c  task16.c  task17.c  task18.c  task2.c  task20.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c  task9.c
hw8/: task1.c  task10.c  task11.c  task12.c  task13.c  task14.c  task15.c  task16.c  task17.c  task18.c  task19.c  task2.c  task20.c  task3.c  task4.c  task5.c  task6.c  task7.c  (+2 more)
(+20 files in other folders)
