cmake_minimum_required(VERSION 3.28)

project(MyCProject LANGUAGES C)


# set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

add_executable(task3 task3.c)
add_executable(task4 task4.c)
add_executable(task5 task5.c)
add_executable(task6 task6.c)
add_executable(task12 task12.c)
add_executable(task13 task13.c)