cmake_minimum_required(VERSION 3.28)

project(MyCProject LANGUAGES C)


# set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

add_executable(task7 task7.c)
add_executable(task8 task8.c)
add_executable(task9 task9.c)
add_executable(task10 task10.c)
add_executable(task11 task11.c)
add_executable(task14 task14.c)
add_executable(task15 task15.c)
add_executable(task16 task16.c)
add_executable(task17 task17.c)
add_executable(task18 task18.c)
add_executable(task19 task19.c)
